# cYandexOAuth

./: CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  cYandexOAuth.c  cYandexOAuth.h  configure.ac
examples/Android/: YDConnect.cpp  YandexConnect.kt
examples/GTK/: YandexConnect.cc
examples/iOS/objc/: YandexConnect.h  YandexConnect.m
examples/iOS/swift/: WebView.swift  YandexConnect.swift
